vpsag/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: app-ingress
    meta.helm.sh/release-namespace: ingress
  creationTimestamp: "2022-03-13T20:24:04Z"
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: app-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/version: 0.48.1
    helm.sh/chart: ingress-nginx-3.35.0
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
          k:{"port":443,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/name: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: helm
    operation: Update
    time: "2022-03-13T20:24:04Z"
  name: app-ingress-ingress-nginx-controller
  namespace: ingress
  resourceVersion: "1450767"
  selfLink: /api/v1/namespaces/ingress/services/app-ingress-ingress-nginx-controller
  uid: 529d8552-dd15-4caa-a9bf-86ebe6f5c460
spec:
  clusterIP: 10.98.172.150
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 31295
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 30681
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: app-ingress
    app.kubernetes.io/name: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer
  externalIPs:
    - 185.203.117.158
status:
  loadBalancer: {}
