vpsag/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: motive-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.motivepick.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              serviceName: motive-back-end-service
              servicePort: 80
